# rustsible-gui

./: .gitignore  CLAUDE.md  DEPLOYMENT_SUMMARY.md  IMPROVEMENTS.md  Makefile  QUICK_START.md  README_RUSTSIBLE_GUI.md  RUN_GUI.sh  RUN_ME.sh  SETTINGS_PERSISTENCE.md  ansible.cfg  inventory.ini  main_playbook.yml  playbook.yml  readme.md  run_gui.py  run_interactive.py
.history/: inventory_20250515175034.ini  inventory_20250515180707.ini  inventory_20250515180715.ini  inventory_20250515181125.ini  main_playbook_20250515181818.yml  main_playbook_20250515182239.yml  playbook_20250515172622.yml  playbook_20250515172626.yml  playbook_20250515172632.yml  playbook_20250515172705.yml  playbook_20250515172707.yml  readme_20250515173726.md  readme_20250515180957.md  readme_20250515180959.md  readme_20250515181006.md  readme_20250515181023.md  readme_20250515181025.md  readme_20250515181029.md
.trunk/: trunk.yaml
context/: ADR.md  FEATURES.md  FOLDER_STRUCTURE.md  GUI_IMPLEMENTATION.md  PRD.md  WORKFLOWS.md  ultrathink.md
docs/: AGGRESSIVE_CLEANUP.md  ARCHITECTURE.md  BEAUTIFICATION_QUICK_REFERENCE.md  BEAUTIFICATION_SUMMARY.md  BEAUTIFIED_PROMPTS_GUIDE.md  BEFORE_AFTER_COMPARISON.md  CHANGELOG_ZOMBIE_FIX.md  CLEANUP_FLOWCHART.md  COMPLETION_SUMMARY.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  LAUNCHER_COMPARISON.md  LAUNCH_TAURI_GUI.md  PLAYBOOK_ENHANCEMENTS.md  PROCESS_CLEANUP.md  QUICKSTART.md  QUICK_START.md  README.md  TAG_REFERENCE.md  TAURI_GUI_COMPLETE.md  ZOMBIE_PROCESS_FIX.md  (+2 more)
gui-egui/: Cargo.toml
gui-egui/src/: config.rs  main.rs  style.rs
(+49 files in other folders)
